# devcontainer-images

./: .editorconfig  .gitignore  .hadolint.yaml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .vale.ini  .yamllint.yaml  CLAUDE.md  Justfile  README.md  biome.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: build.yaml  test.yaml
.vale/config/vocabularies/devcontainer-images/: accept.txt
src/base-debian/: manifest.json
src/base-debian/.devcontainer/: Dockerfile  devcontainer.json
src/base-debian/test-project/: test.sh
src/go/: README.md  manifest.json
src/go/.devcontainer/: Dockerfile  devcontainer.json
src/go/test-project/: test.sh
src/python/: README.md  manifest.json
src/python-uv/: README.md  manifest.json
src/python-uv/.devcontainer/: devcontainer.json
src/python-uv/test-project/: test.sh
src/python/.devcontainer/: Dockerfile  devcontainer.json
